<?xml version="1.0"?>
<package format="2">
  <name>vicon_bridge_udp</name>
  <version>1.0.0</version>
  <description>The vicon_bridge_udp package</description>
  <maintainer email="v.ivan@ed.ac.uk">Vladimir Ivan</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
</package>
